mfrc522.rs

extern "C" {
    #[doc = " Sets the bits given in mask in register reg.\n\n @param reg  The register to update. One of the PCD_Register enums.\n @param mask The bits to set."]
    pub fn PCD_SetRegisterBits(mfrc: *mut mfrc522_t, reg: u8, mask: u8);
}
extern "C" {
    #[doc = " Clears the bits given in mask from register reg.\n\n @param reg  The register to update. One of the PCD_Register enums.\n @param mask The bits to clear."]
    pub fn PCD_ClrRegisterBits(mfrc: *mut mfrc522_t, reg: u8, mask: u8);
}
extern "C" {
    #[doc = " Use the CRC coprocessor in the MFRC522 to calculate a CRC_A.\n\n @param data   Pointer to the data to transfer to the FIFO for CRC\n calculation.\n @param length The number of bytes to transfer.\n @param result Pointer to result buffer. Result is written to result[0..1],\n low byte first.\n @return STATUS_OK on success, STATUS_??? otherwise."]
    pub fn PCD_CalculateCRC(mfrc: *mut mfrc522_t, data: *mut u8, length: u8, result: *mut u8)
        -> u8;
}
extern "C" {
    #[doc = " Executes the Transceive command.\n CRC validation can only be done if backData and backLen are specified.\n\n @param sendData Pointer to the data to transfer to the FIFO.\n @param sendLen  Number of bytes to transfer to the FIFO.\n @param backData NULL or pointer to buffer if data should be read back after\n executing the command.\n @param backLen  Max number of bytes to write to *backData. Out: The number\n of bytes returned.\n @param validBits The number of valid bits in the last byte. 0 for 8 valid\n bits. Default NULL.\n @param rxAlign  Defines the bit position in backData[0] for the first bit\n received. Default 0.\n @param checkCRC True => The last two bytes of the response is assumed to be\n a CRC_A that must be validated.\n\n @return STATUS_OK on success, STATUS_??? otherwise."]
    pub fn PCD_TransceiveData(
        mfrc: *mut mfrc522_t,
        sendData: *mut u8,
        sendLen: u8,
        backData: *mut u8,
        backLen: *mut u8,
        validBits: *mut u8,
        rxAlign: u8,
        checkCRC: bool,
    ) -> u8;
}
extern "C" {
    #[doc = " Transfers data to the MFRC522 FIFO, executes a commend, waits for\n completion and transfers data back from the FIFO. CRC validation can only\n be done if backData and backLen are specified.\n\n @param command   The command to execute. One of the PCD_Command enums.\n @param waitIRq   The bits in the ComIrqReg register that signals successful\n completion of the command.\n @param sendData  Pointer to the data to transfer to the FIFO.\n @param sendLen   Number of bytes to transfer to the FIFO.\n @param backData  NULL or pointer to buffer if data should be read back\n after executing the command.\n @param backLen   In: Max number of bytes to write to *backData. Out: The\n number of bytes returned.\n @param validBits In/Out: The number of valid bits in the last byte. 0 for 8\n valid bits.\n @param rxAlign   In: Defines the bit position in backData[0] for the first\n bit received. Default 0.\n @param checkCRC  In: True => The last two bytes of the response is assumed\n to be a CRC_A that must be validated.\n\n @return STATUS_OK on success, STATUS_??? otherwise."]
    pub fn PCD_CommunicateWithPICC(
        mfrc: *mut mfrc522_t,
        command: u8,
        waitIRq: u8,
        sendData: *mut u8,
        sendLen: u8,
        backData: *mut u8,
        backLen: *mut u8,
        validBits: *mut u8,
        rxAlign: u8,
        checkCRC: bool,
    ) -> u8;
}
extern "C" {
    #[doc = " Transmits a REQuest command, Type A. Invites PICCs in state IDLE to go to\n READY and prepare for anticollision or selection. 7 bit frame. Beware: When\n two PICCs are in the field at the same time I often get STATUS_TIMEOUT -\n probably due do bad antenna design.\n\n @param bufferATQA  The buffer to store the ATQA (Answer to request) in\n @param bufferSize  Buffer size, at least two bytes. Also number of bytes\n returned if STATUS_OK.\n\n @return STATUS_OK on success, STATUS_??? otherwise."]
    pub fn PICC_RequestA(mfrc: *mut mfrc522_t, bufferATQA: *mut u8, bufferSize: *mut u8) -> u8;
}
extern "C" {
    #[doc = " Transmits a Wake-UP command, Type A. Invites PICCs in state IDLE and HALT\n to go to READY(*) and prepare for anticollision or selection. 7 bit frame.\n Beware: When two PICCs are in the field at the same time I often get\n STATUS_TIMEOUT - probably due do bad antenna design.\n\n @param bufferATQA  The buffer to store the ATQA (Answer to request) in\n @param bufferSize  Buffer size, at least two bytes. Also number of bytes\n returned if STATUS_OK.\n\n @return STATUS_OK on success, STATUS_??? otherwise."]
    pub fn PICC_WakeupA(mfrc: *mut mfrc522_t, bufferATQA: *mut u8, bufferSize: *mut u8) -> u8;
}
extern "C" {
    #[doc = " Transmits REQA or WUPA commands.\n Beware: When two PICCs are in the field at the same time I often get\n STATUS_TIMEOUT - probably due do bad antenna design.\n\n @param command     The command to send - PICC_CMD_REQA or PICC_CMD_WUPA\n @param bufferATQA  The buffer to store the ATQA (Answer to request) in\n @param bufferSize  Buffer size, at least two bytes. Also number of bytes\n returned if STATUS_OK.\n\n @return STATUS_OK on success, STATUS_??? otherwise."]
    pub fn PICC_REQA_or_WUPA(
        mfrc: *mut mfrc522_t,
        command: u8,
        bufferATQA: *mut u8,
        bufferSize: *mut u8,
    ) -> u8;
}
extern "C" {
    #[doc = " Transmits SELECT/ANTICOLLISION commands to select a single PICC.\n Before calling this function the PICCs must be placed in the READY(*) state\n by calling PICC_RequestA() or PICC_WakeupA(). On success:\n   - The chosen PICC is in state ACTIVE(*) and all other PICCs have returned\n to state IDLE/HALT. (Figure 7 of the ISO/IEC 14443-3 draft.)\n   - The UID size and value of the chosen PICC is returned in *uid along\n with the SAK.\n\n A PICC UID consists of 4, 7 or 10 bytes.\n Only 4 bytes can be specified in a SELECT command, so for the longer UIDs\n two or three iterations are used:\n\n   UID size        Number of UID bytes                Cascade levels Example\n of PICC\n   ========        ===================                ==============\n =============== single                   4                                1\n MIFARE Classic double                   7                                2\n MIFARE Ultralight triple                  10 3                      Not\n currently in use?\n\n\n @param uid        Pointer to Uid struct. Normally output, but can also be\n used to supply a known UID.\n @param validBits  The number of known UID bits supplied in *uid. Normally\n 0. If set you must also supply uid->size.\n\n @return STATUS_OK on success, STATUS_??? otherwise."]
    pub fn PICC_Select(mfrc: *mut mfrc522_t, uid: *mut Uid, validBits: u8) -> u8;
}
extern "C" {
    #[doc = " Instructs a PICC in state ACTIVE(*) to go to state HALT.\n\n @return STATUS_OK on success, STATUS_??? otherwise."]
    pub fn PICC_HaltA(mfrc: *mut mfrc522_t) -> u8;
}
extern "C" {
    #[doc = " Executes the MFRC522 MFAuthent command.\n This command manages MIFARE authentication to enable a secure communication\n to any MIFARE Mini, MIFARE 1K and MIFARE 4K card. The authentication is\n described in the MFRC522 datasheet section 10.3.1.9 and\n http://www.nxp.com/documents/data_sheet/MF1S503x.pdf section 10.1. For use\n with MIFARE Classic PICCs. The PICC must be selected - ie in state\n ACTIVE(*) - before calling this function. Remember to call\n PCD_StopCrypto1() after communicating with the authenticated PICC -\n otherwise no new communications can start.\n\n All keys are set to FFFFFFFFFFFFh at chip delivery.\n\n @param command    PICC_CMD_MF_AUTH_KEY_A or PICC_CMD_MF_AUTH_KEY_B\n @param blockAddr  The block number. See numbering in the comments in the .h\n file.\n @param key        Pointer to the Crypteo1 key to use (6 bytes)\n @param uid        Pointer to Uid struct. The first 4 bytes of the UID is\n used.\n\n @return STATUS_OK on success, STATUS_??? otherwise. Probably STATUS_TIMEOUT\n if you supply the wrong key."]
    pub fn PCD_Authenticate(
        mfrc: *mut mfrc522_t,
        command: u8,
        blockAddr: u8,
        key: *mut MIFARE_Key,
        uid: *mut Uid,
    ) -> u8;
}
extern "C" {
    #[doc = " Used to exit the PCD from its authenticated state.\n Remember to call this function after communicating with an authenticated\n PICC - otherwise no new communications can start."]
    pub fn PCD_StopCrypto1(mfrc: *mut mfrc522_t);
}
extern "C" {
    #[doc = " Reads 16 bytes (+ 2 bytes CRC_A) from the active PICC.\n\n For MIFARE Classic the sector containing the block must be authenticated\n before calling this function.\n\n For MIFARE Ultralight only addresses 00h to 0Fh are decoded.\n The MF0ICU1 returns a NAK for higher addresses.\n The MF0ICU1 responds to the READ command by sending 16 bytes starting from\n the page address defined by the command argument. For example; if blockAddr\n is 03h then pages 03h, 04h, 05h, 06h are returned. A roll-back is\n implemented: If blockAddr is 0Eh, then the contents of pages 0Eh, 0Fh, 00h\n and 01h are returned.\n\n The buffer must be at least 18 bytes because a CRC_A is also returned.\n Checks the CRC_A before returning STATUS_OK.\n\n @param blockAddr  MIFARE Classic: The block (0-0xff) number. MIFARE\n Ultralight: The first page to return data from.\n @param buffer     The buffer to store the data in\n @param bufferSize Buffer size, at least 18 bytes. Also number of bytes\n returned if STATUS_OK.\n\n @return STATUS_OK on success, STATUS_??? otherwise."]
    pub fn MIFARE_Read(
        mfrc: *mut mfrc522_t,
        blockAddr: u8,
        buffer: *mut u8,
        bufferSize: *mut u8,
    ) -> u8;
}
extern "C" {
    #[doc = " Writes 16 bytes to the active PICC.\n\n For MIFARE Classic the sector containing the block must be authenticated\n before calling this function.\n\n For MIFARE Ultralight the opretaion is called \"COMPATIBILITY WRITE\".\n Even though 16 bytes are transferred to the Ultralight PICC, only the least\n significant 4 bytes (bytes 0 to 3) are written to the specified address. It\n is recommended to set the remaining bytes 04h to 0Fh to all logic 0.\n\n @param blockAddr  MIFARE Classic: The block (0-0xff) number. MIFARE\n Ultralight: The page (2-15) to write to.\n @param buffer     The 16 bytes to write to the PICC\n @param bufferSize Buffer size, must be at least 16 bytes. Exactly 16 bytes\n are written.\n\n @return STATUS_OK on success, STATUS_??? otherwise."]
    pub fn MIFARE_Write(mfrc: *mut mfrc522_t, blockAddr: u8, buffer: *mut u8, bufferSize: u8)
        -> u8;
}
extern "C" {
    #[doc = " Writes a 4 byte page to the active MIFARE Ultralight PICC.\n\n @param page       The page (2-15) to write to.\n @param buffer     The 4 bytes to write to the PICC\n @param bufferSize Buffer size, must be at least 4 bytes. Exactly 4 bytes\n are written.\n\n @return STATUS_OK on success, STATUS_??? otherwise."]
    pub fn MIFARE_UltralightWrite(
        mfrc: *mut mfrc522_t,
        page: u8,
        buffer: *mut u8,
        bufferSize: u8,
    ) -> u8;
}
extern "C" {
    #[doc = " MIFARE Decrement subtracts the delta from the value of the addressed block,\n and stores the result in a volatile memory. For MIFARE Classic only. The\n sector containing the block must be authenticated before calling this\n function. Only for blocks in \"value block\" mode, ie with access bits [C1 C2\n C3] = [110] or [001]. Use MIFARE_Transfer() to store the result in a block.\n\n @param blockAddr The block (0-0xff) number.\n @param delta     This number is subtracted from the value of block\n blockAddr.\n\n @return STATUS_OK on success, STATUS_??? otherwise."]
    pub fn MIFARE_Decrement(mfrc: *mut mfrc522_t, blockAddr: u8, delta: u32) -> u8;
}
